# rust-synth

./: .gitignore  Cargo.toml  Makefile  README.md  asoundrc  build.js  package-lock.json  package.json  shell.nix  tsconfig.json
ardour-shell/: shell.nix
ardour-shell/ardour-pkg/: default-plugin-search-paths.patch
dyn/: dyn.c
gui/: accessors.ts  app.tsx  chart.tsx  db-meter.tsx  dutil.ts  extra-util.ts  lowpass-widget.tsx  main.ts  protocol.ts  reduce.ts  roll-editor-main.tsx  roll-editor-overlay.tsx  roll-reduce.ts  roll-util.ts  roll.tsx  state.ts  types.ts  util.ts  vscrollbar.tsx
patches/: 0001-Debug-a-little.patch
public/: index.html  main.js  style.css
raw-sb/: .gitignore  Makefile  config.h  midiloop.c  pcm.c
src/: allpass.rs  alsa-test.rs  audio-old.rs  audio.rs  bass_drum.rs  beep.rs  consts.rs  drum.rs  envelope.rs  gain.rs  lowpass.rs  main-2024.rs  main-old.rs  main.rs  meter.rs  midi-old.rs  midi.rs  midi_manager.rs  notegen.rs  reasonable_synth.rs  reduce.rs  reverb.rs  sb.rs  sequencer.rs  state.rs  synth.rs  ugen.rs  ugen_factory.rs  ugen_group.rs  util.rs  wavetables.rs  webserver.rs  webserver_actix.rs  webserver_rouille.rs
src/freeverb/: all_pass.rs  comb.rs  delay_line.rs  freeverb.rs  mod.rs
