[package]
name = "rsynth"
version = "0.1.0"
authors = ["Jason Reed <jcreed@gmail.com>"]
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
alsa = "0.9.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
dbus = "0.9.7"
midir = "0.9.1"
rand = "0.8.5"
rocket = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
tokio = "1.37.0"
