[package]
name = "rsynth"
version = "0.1.0"
authors = ["Jason Reed <jcreed@gmail.com>"]
edition = "2021"

[profile.dev]
panic = 'abort'

[dependencies]
alsa = "0.9.0"
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "env"] }
ctrlc = "3.4.4"
dbus = "0.9.7"
glicol = "0.13.5"
midir = "0.9.1"
rand = "0.8.5"
rocket = "0.5.0"
rocket_ws = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
tokio = "1.37.0"
